<resources>
    <string name="app_name">RegisterApp</string>
    <string name="profileImage_description" />
    <string name="welcome_message">Bienvenido!</string>
    <string name="nombre_value">"Nombre: "</string>
    <string name="ci_txtValue">"C.I.: "</string>
    <string name="horaEntrada_txtValue">Hora Entrada:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lector_qr">Lector QR</string>
    <string name="descrip_lector_qr">Ubica tu código en el visor de la cámara para marcar.</string>
    <string name="avatar_description">Imagen avatar de perfil</string>
    <string name="entrance_button_value">Ingresar</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_cerrar">Cerrar</string>
    <string name="label_labor">Labor</string>
    <string name="template_name_jornalero">name_jornalero</string>
    <string name="label_fecha">Fecha</string>
    <string name="text_horaFinal">Hora Final:</string>
    <string name="text_cantidad">Cantidad</string>
    <string name="label_observ">Observaciones</string>
    <string name="label_jornData">Datos de jornalero</string>
    <string name="title_exitRegister">Registro de salidas</string>
</resources>
