<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".RegisterWeightActivity">

    <Button
        android:id="@+id/btn_guardar"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="28dp"
        android:text="@string/btn_guardar"
        app:layout_constraintBottom_toTopOf="@+id/btnCerrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCerrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/btn_cerrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/label_labor"
        style="@style/style_text"
        android:layout_width="59dp"
        android:layout_height="23dp"
        android:text="@string/label_labor"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/label_horaInicial_salida"
        app:layout_constraintStart_toStartOf="@+id/text_nameJornalero"
        app:layout_constraintTop_toBottomOf="@+id/text_nameJornalero" />

    <Spinner
        android:id="@+id/spinner_labores"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginStart="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/label_labor"
        app:layout_constraintEnd_toEndOf="@+id/text_fecha"
        app:layout_constraintStart_toEndOf="@+id/label_labor"
        app:layout_constraintTop_toTopOf="@+id/label_labor"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_nameJornalero"
        style="@style/style_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:text="@string/template_name_jornalero"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/label_labor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/label_fecha"
        style="@style/style_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:text="@string/label_fecha"
        app:layout_constraintBottom_toBottomOf="@+id/text_nameJornalero"
        app:layout_constraintEnd_toStartOf="@+id/text_fecha"
        app:layout_constraintTop_toTopOf="@+id/text_nameJornalero"
        app:layout_constraintVertical_bias="0.928" />

    <TextView
        android:id="@+id/text_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/label_fecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/label_fecha" />

    <EditText
        android:id="@+id/text_horaEntrada"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="@+id/label_horaInicial_salida"
        app:layout_constraintEnd_toEndOf="@+id/spinner_labores"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spinner_labores"
        app:layout_constraintTop_toTopOf="@+id/label_horaInicial_salida" />

    <TextView
        android:id="@+id/label_horaInicial_salida"
        style="@style/style_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horaEntrada_txtValue"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/label_horaFinal_salida"
        app:layout_constraintStart_toStartOf="@+id/label_labor"
        app:layout_constraintTop_toBottomOf="@+id/label_labor" />

    <TextView
        android:id="@+id/label_horaFinal_salida"
        style="@style/style_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_horaFinal"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/text_cantidad"
        app:layout_constraintStart_toStartOf="@+id/label_horaInicial_salida"
        app:layout_constraintTop_toBottomOf="@+id/label_horaInicial_salida" />

    <TextView
        android:id="@+id/text_cantidad"
        style="@style/style_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_cantidad"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_guardar"
        app:layout_constraintStart_toStartOf="@+id/label_horaFinal_salida"
        app:layout_constraintTop_toBottomOf="@+id/label_horaFinal_salida" />

    <EditText
        android:id="@+id/text_cantidadValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/text_cantidad"
        app:layout_constraintEnd_toEndOf="@+id/text_horaFinal"
        app:layout_constraintStart_toStartOf="@+id/text_horaFinal"
        app:layout_constraintTop_toTopOf="@+id/text_cantidad" />

    <EditText
        android:id="@+id/text_horaFinal"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="@+id/label_horaFinal_salida"
        app:layout_constraintEnd_toEndOf="@+id/text_horaEntrada"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/label_horaInicial_salida"
        app:layout_constraintTop_toTopOf="@+id/label_horaFinal_salida"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>