<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="userInfo"
            type="com.example.myapplication.models.Jornalero" />
        <variable
            name="iniTime"
            type="String" />
        <variable
            name="viewModel"
            type="com.example.myapplication.viewmodels.UserProfileViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfile">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/nombre_textView"
        style="@style/style_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="32dp"
        android:text="@string/nombre_value"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/ci_textView"
        app:layout_constraintEnd_toStartOf="@+id/nombre_textValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/nombre_textValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:text="@={userInfo.nombre}"
        app:layout_constraintBottom_toBottomOf="@+id/nombre_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nombre_textView"
        app:layout_constraintTop_toTopOf="@+id/nombre_textView" />

    <TextView
        android:id="@+id/horaEntrada_textView"
        style="@style/style_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="15dp"
        android:text="@string/horaEntrada_txtValue"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/entrance_button"
        app:layout_constraintEnd_toStartOf="@+id/horaEntrada_textValue"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ci_textView" />

    <TextView
        android:id="@+id/ci_textValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@={userInfo.cedula}"
        app:layout_constraintBottom_toTopOf="@+id/horaEntrada_textValue"
        app:layout_constraintEnd_toEndOf="@+id/nombre_textValue"
        app:layout_constraintStart_toStartOf="@+id/nombre_textValue"
        app:layout_constraintTop_toBottomOf="@+id/nombre_textValue" />

    <TextView
        android:id="@+id/horaEntrada_textValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@{iniTime}"
        app:layout_constraintBottom_toBottomOf="@+id/horaEntrada_textView"
        app:layout_constraintEnd_toEndOf="@+id/ci_textValue"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ci_textValue"
        app:layout_constraintTop_toTopOf="@+id/horaEntrada_textView" />

    <TextView
        android:id="@+id/ci_textView"
        style="@style/style_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/ci_txtValue"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/ci_textValue"
        app:layout_constraintEnd_toStartOf="@+id/ci_textValue"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nombre_textView" />

    <TextView
        android:id="@+id/textView8"
        style="@style/style_text"
        android:layout_width="195dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:text="@string/welcome_message"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/entrance_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/entrance_button_value"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="221dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.983"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logoexpos" />

    <TextView
        android:id="@+id/label_jornData"
        style="@style/style_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_jornData"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/nombre_textView"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.391" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>